# rust-cli-totp

./: Cargo.toml  README.md
files/: secrets.json
src/: crypto_funcs.rs  dbfuncs.rs  main.rs  totp_client.rs
