[package]
name = "mytotpp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
arboard = "3.3.0"
bardecoder = "0.5.0"
block-modes = "0.9.1"
cbc = "0.1.2"
cipher = "0.4.4"
clap = "4.4.11"
data-encoding = "2.5.0"
ecb = "0.1.2"
hex = "0.4.3"
hex-literal = "0.4.1"
hmac = "0.12.1"
image = "0.24.7"
num-bigint = "0.4.4"
num-traits = "0.2.17"
rand = "0.8.5"
rustcrypto = "0.0.0"
serde_json = "1.0.108"
sha1 = "0.10.6"
sha2 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
urlencoding = "2.1.3"
